# despair-au

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  despair-au.cbp  despair-au.depend  despair-au.layout  install.bash
examples/: eg_m3u.cc  example.cc  example.cpp
include/: despair-au.hpp
include/despair-au/: despair-au.hh  error_code.h  m3u.hh
src/: despair-au-al-source.cc  despair-au-al-source.cpp  despair-au-pch.hh  despair-au.cc  despair-au.cpp  m3u.cc
